erDiagram
  user_master ||--o{ installed_base : "created_by"
  installed_base ||--o{ service_logs : "installed_base_id"
  installed_base ||--o{ spare_parts_consumption : "installed_base_id"
  service_logs ||--o{ spare_parts_consumption : "service_log_id (optional)"
  postcodes ||--o{ installed_base : "pincode lookup (logical)"

  installed_base {
    INT id PK
    INT order_ref_id
    VARCHAR order_id
    VARCHAR fab_number
    VARCHAR customer_name
    VARCHAR street_1
    VARCHAR street_2
    VARCHAR pincode
    VARCHAR city
    VARCHAR district
    VARCHAR state
    VARCHAR mobile
    VARCHAR email
    VARCHAR dealer_name
    VARCHAR machine_model_code
    VARCHAR machine_model
    DATE invoice_date
    DATE commissioning_date
    DECIMAL running_hours
    VARCHAR industry_segment
    TEXT remarks
    INT created_by FK
    VARCHAR username
    TIMESTAMP created_at
    TIMESTAMP updated_at
    TIMESTAMP deleted_at
  }

  service_logs {
    INT id PK
    INT installed_base_id FK
    VARCHAR fab_number
    VARCHAR serial_number
    TIMESTAMP deleted_at
  }

  spare_parts_consumption {
    INT id PK
    INT installed_base_id FK
    INT service_log_id FK
  }

  user_master {
    INT id PK
    VARCHAR username
    VARCHAR name
  }

  postcodes {
    VARCHAR postcode
    VARCHAR city
    VARCHAR district
    VARCHAR state
    VARCHAR state_code
  }
